--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -5,3 +5,7 @@
   background-color: #029d16;
   font-size: 25px;
 }
+.text-none {
+  text-transform: none !important;
+  font-size: 14px !important;
+}
