--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,11 +1,28 @@
 .text-common {
   color: #574f4f !important;
 }
+
 .modal-title-custom {
   background-color: #029d16;
   font-size: 25px;
 }
+
 .text-none {
   text-transform: none !important;
   font-size: 14px !important;
+}
+
+.items-right {
+  display: flex !important;
+  justify-content: end !important;
+}
+
+.text-success {
+  background-color: #029d16 !important;
+  color: #e9e2e2 !important;
+}
+
+.text-error {
+  background-color: #df4c20 !important;
+  color: #e9e2e2 !important;
 }
